# agent_design_pattern

HITL/: .env  README.md  config.py  hitl_code_explanation.md  hitl_demo.py  pyproject.toml
Reasoning Techniques/: .env.example  README.md  config.py  deep_research.py  prompts.py  pyproject.toml  run.py
agentic-rag/: .env.example  README.md  agent.py  backend.py  config.py  documents.py  pyproject.toml  retriever.py  run.py  streamlit_app.py  tools.py  tracing.py
agentic-rag/agentic_rag/: __init__.py  api.py  api_client.py  documents.py  frontend.py  graph.py  observability.py  retriever.py  schemas.py  service.py  settings.py  tools.py
agentic-rag/kb/: 01_customer_onboarding.md  02_accounts_and_fees.md  03_transfer_limits.md  04_card_security.md  05_card_disputes.md  06_credit_products.md  07_escalation_rules.md
gemini-agentic-rag-platform/: .env.example  .gitignore  README.md  pyproject.toml  run.py
gemini-agentic-rag-platform/corpora/finance/: 01_budgets.md  02_expenses.md  03_procurement.md
gemini-agentic-rag-platform/corpora/hr/: 01_departments.md  02_employees.md  03_hr_policies.md
gemini-agentic-rag-platform/corpora/infra/: 01_servers.md  02_incidents.md  03_network.md
gemini-agentic-rag-platform/corpora/projects/: 01_active_projects.md  02_team_assignments.md  03_milestones.md
gemini-agentic-rag-platform/gemini_rag/: __init__.py  documents.py  graph.py  observability.py  retriever.py  schemas.py  service.py  settings.py
memory_management/: .gitignore  Dockerfile  README.md  api.py  chatbot.py  check_db.py  clean_db.py  config.py  docker-compose.yml  graph.py  mcp_server.py  mcp_tools.py  memory.py  pyproject.toml  run.py  scratch.py
memory_management/static/: index.html  script.js  style.css
mutil-agent/: .gitignore  README.md  agents.py  config.py  image_gen.py  pyproject.toml  run.py
parallelization/: README.md  parallel.py  prompts.py  pyproject.toml  run.py
planing/: README.md  config.py  planner.py  pyproject.toml  run.py  tools.py
prompt-chaining/: README.md  chain.py  prompts.py  pyproject.toml  run.py
reflection/: README.md  config.py  prompts.py  pyproject.toml  reflection.py  run.py
routing/: README.md  agents.py  coordinator.py  pyproject.toml  run.py  tools.py
tool_call/: README.md  agent.py  config.py  pyproject.toml  run.py  smart_home.py  tools.py
