[project]
name = "deep-research-reflection"
version = "0.1.0"
description = "Demo: LangGraph Deep Research flow with reflection loop"
requires-python = ">=3.11"
dependencies = [
    "ddgs>=9.14.4",
    "langchain>=1.2.16",
    "langchain-core>=1.3.2",
    "langchain-openai>=0.3.0",
    "langgraph>=1.1.10",
    "pydantic>=2.7.0",
    "python-dotenv>=1.2.2",
    "rich>=14.0.0",
]
