[project]
name = "agentic-rag-demo"
version = "0.1.0"
description = "Demo: Agentic RAG pattern with query planning, retrieval grading, rewrite loop, and cited answers"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.125.0",
    "langchain>=1.2.16",
    "langchain-core>=1.3.2",
    "langchain-openai>=0.3.0",
    "langfuse>=4.6.1",
    "langgraph>=1.1.10",
    "python-dotenv>=1.2.2",
    "requests>=2.34.0",
    "rich>=14.0.0",
    "streamlit>=1.45.0",
    "uvicorn>=0.47.0",
]
