[project]
name = "gemini-agentic-rag-demo"
version = "0.1.0"
description = "Demo: Gemini Enterprise Agent Platform — 5-Agent Agentic RAG with cross-corpus retrieval"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.16",
    "langchain-core>=1.3.2",
    "langchain-openai>=0.3.0",
    "langfuse>=4.0.0",
    "langgraph>=1.1.10",
    "python-dotenv>=1.2.2",
    "rich>=14.0.0",
]
