[project]
name = "multi-agent-art-creator"
version = "0.1.0"
description = "Demo: Multi-Agent pattern — Artist Agent + ImageGen Agent (Agent as a Tool)"
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.16",
    "langchain-core>=1.3.2",
    "langchain-openai>=0.3.0",
    "langgraph>=1.1.10",
    "python-dotenv>=1.2.2",
    "rich>=14.0.0",
    "pillow>=11.0.0",
]
